// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frontend API transport > snapshots delete and reload commands 1`] = `
[
  [
    {
      "type": "ha_notifications/get_config",
    },
  ],
  [
    {
      "config": {
        "alerts": [],
        "version": 1,
      },
      "type": "ha_notifications/save_config",
    },
  ],
  [
    {
      "type": "ha_notifications/reload",
    },
  ],
]
`;

exports[`frontend API transport > uses structured config for configuration routes 1`] = `
[
  [
    {
      "type": "ha_notifications/get_config",
    },
  ],
  [
    {
      "config": {
        "alerts": [],
        "version": 1,
      },
      "type": "ha_notifications/validate_config",
    },
  ],
  [
    {
      "config": {
        "alerts": [],
        "version": 1,
      },
      "type": "ha_notifications/save_config",
    },
  ],
]
`;
